--- a/app/index.css
+++ b/app/index.css
@@ -1,3 +1,41 @@
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
-  background: green;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font-family: -apple-system, 
+               BlinkMacSystemFont, 
+               Segoe UI, 
+               Roboto,
+               Oxygen-Sans,
+               Ubuntu,
+               Cantarell,
+               Helvetica Neue,
+               sans-serif;
+}
+
+#app,
+.container {
+  height: 100%;
+  width: 100%;
+}
+
+.home {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header {
+  font-size: 45px;
+  color: #fff;
+  font-weight: 100;
 }
