--- a/app/index.css
+++ b/app/index.css
@@ -96,3 +96,34 @@ body {
   background-color: #5cb85c;
   border-color: #4cae4c;
 }
+
+.forecast-container {
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 50px auto;
+}
+.dayContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 35px;
+}
+.forecast-header {
+  font-size: 65px;
+  color: #333;
+  font-weight: 100;
+  text-align: center;
+}
+.subheader {
+  font-size: 30px;
+  color: #333;
+  font-weight: 100;
+}
+.weather {
+  height: 130px;
+}
