--- a/app/index.css
+++ b/app/index.css
@@ -112,6 +112,7 @@ body {
   justify-content: center;
   flex-direction: column;
   margin: 35px;
+  cursor: pointer;
 }
 .forecast-header {
   font-size: 65px;
