--- a/app/index.css
+++ b/app/index.css
@@ -34,9 +34,10 @@ body {
 }
 
 .home {
+  background-image: url('./images/pattern.svg');
+  background-size: cover;
   height: 100%;
   width: 100%;
-  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
