--- a/app/index.css
+++ b/app/index.css
@@ -37,14 +37,51 @@ body {
   .cover-heading { font-size: 2rem; }
 }
 
-@media (max-width: 425px) {
-  .input-submit {text-align: center}
-  .btn-submit { width: 100%; }
-}
-
 @media (min-width: 992px) {
   .table-container {
     width: 75%;
     margin: 0 auto;
   }
+}
+
+/* SEARCH */
+input.form-control:focus {
+  outline: none;
+  border: 1px solid rgb(185,185,185);
+}
+input.form-control::placeholder { color: rgb(185,185,185); }
+
+button.btn-submit {
+  color: #fff;
+  background-color: #343a40;
+}
+button.btn-submit:hover {
+  color: #fff;
+  background-color: #23272b;
+}
+
+input.material,
+button.material {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 
+              0 3px 1px -2px rgba(0, 0, 0, .2), 
+              0 1px 5px 0 rgba(0, 0, 0, .12);
+}
+input.material:hover,
+input.material:focus,
+button.material:hover,
+button.material:focus {
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 
+              0 1px 18px 0 rgba(0, 0, 0, .12), 
+              0 3px 5px -1px rgba(0, 0, 0, .2);
+}
+input.material:active,
+button.material:active {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 
+              0 3px 1px -2px rgba(0, 0, 0, .2), 
+              0 1px 5px 0 rgba(0, 0, 0, .12);
+}
+
+@media (max-width: 425px) {
+  .input-submit {text-align: center}
+  .btn-submit { width: 100%; }
 }
